@@ -1,7 +1,7 @@
 /*
   mysqlfs - MySQL Filesystem
   Copyright (C) 2006 Tsukasa Hamano <code@cuspy.org>
-  $Id: query.h,v 1.5 2006/09/04 11:43:30 ludvigm Exp $
+  $Id: query.h,v 1.6 2006/09/04 13:11:21 ludvigm Exp $
 
   This program can be distributed under the terms of the GNU GPL.
   See the file COPYING.
@@ -20,6 +20,11 @@ int query_write(MYSQL *mysql, const char *path, const char* buf, size_t size,
 int query_truncate(MYSQL *mysql, const char *path, off_t length);
 
 int query_delete(MYSQL *mysql, const char* path);
+
+int query_symlink(MYSQL *mysql, const char* from, const char* to);
+int query_readlink(MYSQL *mysql, const char* path);
+
+int query_rename(MYSQL *mysql, const char* from, const char* to);
 
 int query_chmod(MYSQL *mysql, const char* path, mode_t mode);
 int query_utime(MYSQL *mysql, const char* path, struct utimbuf *time);
