@@ -4,6 +4,7 @@
 	  supposed to do.
 	* Pulled 'data' column to a separate table.
 	* Implemented truncate(), symlink(), readlink()
+	* Implemented limited rename() only for regular files
 	* Added better logging infrastructure, converted
 	  all plain printf() calls to log_printf()
 	* Removed autogenerated files from CVS.
